# storage/api-docs/api-docs.json
@@ -234,6 +234,86 @@
                     }
                 }
             }
+        },
+        "/signup/complete": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Signup Complete",
+                "description": "Signup Complete",
+                "operationId": "postSignupComplete",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "signup_token": {
+                                        "type": "string",
+                                        "example": "XXXXXXXXXXXXXXXXX"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "naveen.w3master@gmail.com"
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Naveen"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success Message!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Validation Error Message!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
